# sim-fft

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
example/: Cargo.toml  memory.x
example/.cargo/: config.toml
example/example/: adc.rs  example.rs
example/src/: main.rs
src/: lib.rs
