[package]
edition = "2021"
readme = "README.md"
name = "example"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
# rtic-monotonic = "=1.0.0"
# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.

stm32f1xx-hal = { version = "0.11.0", features = [
    "stm32f103",
    "defmt",
    "medium",
] }

nb = "1.1.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["defmt"] }
panic-semihosting = "0.6.0"

libm = "0.2.15"
sim-fft = { package = "sim_fft", path = "../../sim-fft", version = "0.1.0" }
fugit = "0.3.7"


[[bin]]
name = "example"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
